--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     width: 100%;
 }
 .logo{
