--- a/style.css
+++ b/style.css
@@ -7,7 +7,13 @@ body{
     align-items: center;
     justify-content: space-between;
     flex-wrap: nowrap;
+}
+.--100{
     width: 100%;
+}
+
+.--40{
+    width: 40%;
 }
 .logo{
     width: 50px;
