--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ section{
 }
 
 .background{
-    z-index: -1;
+    z-index: -10;
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 0px;
+    left: 0px;
 }
 
 .row{
