--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ section{
 .background{
     z-index: -1;
     position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .row{
