--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ section{
     position: absolute;
     top: 0;
     right:0;
-    max-height: 100px;
+    max-height: 100%;
     object-fit: contain;
 }
 
