--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ section{
     position: absolute;
     top: 0;
     right:0;
-    max-height: 100%;
-    object-fit:fill;
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
 }
 
 .row{
