--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ section{
     position: relative;
 }
 
+.container{
+    max-width: 90vw;
+    margin: 0 auto;
+
+}
+
 .background{
     z-index: -1;
     position: absolute;
