--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ img{
     z-index: -1;
     position: absolute;
     top: 0;
-    right:0;
+    left:0;
     height: 100%;
     width: 100%;
     object-fit: cover;
