--- a/reset.css
+++ b/reset.css
@@ -37,6 +37,10 @@ body {
   line-height: 1.5;
 }
 
+a{
+    text-decoration: none;
+}
+
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
