--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ img{
     object-fit: cover;
 }
 
+a{
+    width: 100%;
+}
+
 .container{
     max-width: 90vw;
     margin: 0 auto;
@@ -78,6 +82,5 @@ img{
 }
 .nav__link{
     color: #fff;
-    width: 100%;
     text-align: center;
 }
