--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a{
     align-items: center;
     justify-content: space-between;
     flex-wrap: nowrap;
-    height: auto;
+    height: 100%;
 }
 
 .--relative{
